# openprot

./: .bazelrc  .gitignore  .gitmodules  .semgrepignore  ASSESSMENT-i2c-core-ddk-vs-template.md  ASSESSMENT-stack-facade-template.md  BOARD_REFACTOR.md  BUILD.bazel  BUILD.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INTEGRATION.md  MODULE.bazel  PERIPHERAL_OWNERSHIP_ANALYSIS.md  README.md  crates.js  deny.toml  help.html  mctp-parse  os.md  out-of-tree.md  plan-serial.md  port-mctp-echo.md  rreview  rust-toolchain.toml  search-index.js  settings.html  spi-plan.md  src-files.js  summary.md  test-mctp.md  workflows.json
.cargo/: config.toml
.claude/: mctp-test-plan.md
.github/: copilot-instructions.md  dependabot.yml
apps/i2c-slave-echo/: BUILD.bazel
apps/i2c-slave-echo/src/: main.rs
docs/: aspeed-rust-uart-compatibility.md  ast1060-pac-driver-guide.md  book.toml  crypto-api-ergonomics.md  crypto-refactor-implementation-plan.md  crypto-service-design-review.md  diagnostic-plan.md  digest-server-hubris-impl.md  interrupt-symbol-ownership.md  peripheral-driver-pac.md  virt-ast1060-bazel-review.md
drivers/flash/api/: BUILD.bazel  README.md
drivers/flash/api/src/: backend.rs  lib.rs  protocol.rs
drivers/flash/client/: BUILD.bazel  README.md
drivers/flash/client/src/: lib.rs
drivers/i2c/server-runtime/: BUILD.bazel
drivers/i2c/server-runtime/src/: lib.rs
drivers/spimonitor/api/: BUILD.bazel
drivers/spimonitor/api/src/: lib.rs  service.rs
drivers/usart/api/: BUILD.bazel  Cargo.toml
drivers/usart/api/src/: backend.rs  lib.rs  protocol.rs
executor/: BUILD.bazel  deisgn.md
executor/src/: lib.rs
executor/tests/: BUILD.bazel  qemu-riscv32-virt.ld  qemu_riscv32_test.rs  run_qemu_riscv32.sh  run_qemu_test.sh
hal/blocking/: Cargo.toml
hal/blocking/flash/: BUILD.bazel  driver.rs  flash.rs  flash_ext.rs
hal/blocking/src/: cipher.rs  digest.rs  ecdsa.rs  gpio_port.rs  i2c_device.rs  i2c_hardware.rs  i2c_target.rs  key_vault.rs  lib.rs  mac.rs  pin_controller.rs  system_control.rs
kernel_bridge/: BUILD.bazel
kernel_bridge/src/: lib.rs
openprot/: .gitignore  Cargo.toml  README.md  all.html  fn.greet.html  index.html
patches/: BUILD.bazel
platform/qemu_virt_riscv32/: BUILD.bazel  qemu_runner.sh
platform/traits/: Cargo.toml
platform/traits/hubris/: Cargo.toml
platform/traits/hubris/src/: lib.rs
platform/traits/src/: lib.rs
presubmit/: cpp_include_guard.py  license.py  roller.py
reactor/: BUILD.bazel
reactor/src/: lib.rs
services/flash/: BUILD.bazel  README.md  client.rs  opcode.rs  server.rs
services/i2c/: BUILD.bazel  README.md
services/i2c/api/: BUILD.bazel  Cargo.toml  WIRE_REVIEW.md
services/i2c/api/src/: address.rs  client.rs  error.rs  lib.rs  operation.rs  protocol.rs  seam.rs  target.rs  transport.rs  wire.rs
services/i2c/backend-aspeed/: BUILD.bazel
services/i2c/backend-aspeed/src/: lib.rs
services/i2c/client/: BUILD.bazel
services/i2c/client-ipc/: BUILD.bazel
services/i2c/client-ipc/src/: lib.rs
services/i2c/client/src/: lib.rs
services/i2c/docs/: framework.md  hubris-i2c-architecture-review.md  i2c-client-api-implementation-plan.md  i2c-client-api.md
services/i2c/server/: BUILD.bazel
services/i2c/server-runtime/: BUILD.bazel
services/i2c/server-runtime/src/: lib.rs
services/i2c/server/src/: lib.rs  main.rs  slave.rs
services/i2c/tests/: BUILD.bazel  loopback.rs
services/mctp/: BUILD.bazel  README.md
services/mctp/api/: BUILD.bazel  Cargo.toml  README.md
services/mctp/api/src/: error.rs  lib.rs  stack.rs  traits.rs  wire.rs
services/mctp/client/: BUILD.bazel  Cargo.toml  README.md
services/mctp/client-ipc/: BUILD.bazel
services/mctp/client-ipc/src/: lib.rs
services/mctp/client/src/: lib.rs
services/mctp/echo/: BUILD.bazel
services/mctp/echo/src/: lib.rs
services/mctp/echo/tests/: echo_host.rs  echo_host_diagram.md
services/mctp/server/: BUILD.bazel  Cargo.toml  DESIGN_IN_PROCESS_REQUESTER.md  IMPLEMENTATION_PLAN.md  INITIALIZATION.md  MCTP-SERVER-ERROR-INTEGRATION-DESIGN.md  README.md
services/mctp/server/src/: direct_client.rs  dispatch.rs  lib.rs  main.rs  server.rs
services/mctp/server/tests/: dispatch.rs  echo.rs  integration.rs  server_unit.rs
services/mctp/server/tests/common/: mod.rs
services/mctp/transport-i2c/: BUILD.bazel  Cargo.toml  README.md
services/mctp/transport-i2c/src/: lib.rs  receiver.rs  sender.rs
services/mctp/transport-loopback/: BUILD.bazel  Cargo.toml  README.md
services/mctp/transport-loopback/examples/: spdm_usage.md
services/mctp/transport-loopback/src/: lib.rs
services/mctp/transport-serial/: BUILD.bazel
services/mctp/transport-serial/src/: common.rs  direct.rs  ipc.rs  lib.rs
services/orchestrator/: BUILD.bazel  README.md
services/orchestrator/sm/: BUILD.bazel  README.md
services/orchestrator/sm/src/: effect.rs  lib.rs  platform.rs
services/pldm/: BUILD.bazel  Cargo.toml  README.md
services/pldm/docs/: pldm-mctp-integration.md
services/pldm/src/: cad-openprot.code-workspace  error.rs  lib.rs  requester.rs  responder.rs  transport.rs
services/pldm/tests/: requester_responder_host.rs
signing/keys/: BUILD.bazel  defs.bzl  gb00-app-key-dev-0.pub.der
signing/tokens/: BUILD.bazel  ot-earlgrey-a1.yaml
syscall-abstraction/: Cargo.toml  DESIGN.md  README.md
test/ast1060-test-harness/: Cargo.toml  build.rs  link.x  memory.x
test/ast1060-test-harness/src/: main.rs
tools/sgpiom/: BUILD.bazel  README.md  sgpio_json_tool.py
tools/sgpiom/examples/: ast1060_dcscm.json  ast1060_prot_dice.json  common.json
tools/sgpiom/schema/: banks.schema.json  controller.schema.json  signals.schema.json
util/console/: BUILD.bazel  dbg_print.c  dbg_print.h  hexdump.rs  lib.rs  pigweed.rs  stdout.rs
util/error/: BUILD.bazel  MIGRATION.md  README.md  TRAIT_DESIGN_LESSON.md  error.rs  flash.rs  ipc.rs  kernel.rs  lib.rs
util/io/: BUILD.bazel  io.rs
util/ipc/: BUILD.bazel  lib.rs
util/regcpy/: BUILD.bazel  README.md  regcpy.rs
util/types/: BUILD.bazel  README.md  fourcc.rs  lib.rs  opcode.rs  power_of_2.rs
(+330 files in other folders)
