# Licensed under the Apache-2.0 license

[workspace]
members = [
    "openprot",
    "xtask",
    "hal/blocking",
    "hal/async", 
    "hal/nb",
    "platform/traits",
    "platform/impls/baremetal/mock",
    "platform/impls/linux",
    "platform/impls/tock",
    "platform/impls/hubris",
    "services/telemetry",
    "services/storage",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/rusty1968/openprot"
edition = "2021"

[workspace.dependencies]
zerocopy = { version = "0.8.27", features = ["derive"] }
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"
