# Licensed under the Apache-2.0 license

load("@pigweed//pw_kernel/tooling:app_package.bzl", "app_package")
load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "i2c_slave_echo",
    srcs = ["src/main.rs"],
    edition = "2024",
    tags = ["kernel"],
    visibility = ["//visibility:public"],
    deps = [
        ":app_i2c_slave_echo",
        "//services/i2c/api:i2c_api",
        "//services/i2c/client:i2c_client",
        "@pigweed//pw_kernel/userspace",
        "@pigweed//pw_log/rust:pw_log",
        "@pigweed//pw_status/rust:pw_status",
    ],
)

app_package(
    name = "app_i2c_slave_echo",
    app_name = "i2c_slave_echo",
    edition = "2024",
    system_config = "//target/ast1060-evb/i2c-slave:system_config",
    tags = ["kernel"],
)
