# Licensed under the Apache-2.0 license
# SPDX-License-Identifier: Apache-2.0

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "pldm_service",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "openprot_pldm_service",
    edition = "2024",
    deps = [
        "//services/mctp/api:mctp_api",
        "@rust_crates//:mctp",
        "@rust_crates//:mctp-lib",
        "@rust_crates//:pldm-common",
        "@rust_crates//:pldm-interface",
    ],
)

rust_test(
    name = "pldm_service_test",
    crate = ":pldm_service",
)

rust_test(
    name = "pldm_requester_responder_host_test",
    srcs = ["tests/requester_responder_host.rs"],
    crate_root = "tests/requester_responder_host.rs",
    edition = "2024",
    deps = [
        ":pldm_service",
        "//services/mctp/api:mctp_api",
        "//services/mctp/server:mctp_server_lib",
        "@rust_crates//:mctp",
        "@rust_crates//:mctp-lib",
        "@rust_crates//:pldm-common",
        "@rust_crates//:pldm-interface",
    ],
)
