# Copyright 2025 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@nonhermetic//:env.bzl", "ENV")
load("//tooling/signing:defs.bzl", "signing_tool")

package(default_visibility = ["//visibility:public"])

signing_tool(
    name = "local",
    location = "local",
    tool = "@opentitan_devbundle//:opentitantool/opentitantool",
)

signing_tool(
    name = "cloud_kms_gb",
    data = [
        "ot-earlgrey-a1.yaml",
        "@cloud_kms_hsm//:libkmsp11",
    ],
    env = {
        # The Cloud KMS PKCS11 provider needs to know where the user's home
        # is in order to load the gclould credentials.
        "HOME": ENV["HOME"],
        "HSMTOOL_MODULE": "$(location @cloud_kms_hsm//:libkmsp11)",
        "KMS_PKCS11_CONFIG": "$(location ot-earlgrey-a1.yaml)",
    },
    location = "token",
    tool = "@opentitan_devbundle//:hsmtool/hsmtool",
)
