# Licensed under the Apache-2.0 license
# SPDX-License-Identifier: Apache-2.0

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "precise_error",
    srcs = [
        "lib.rs",
    ],
    crate_name = "util_error",
    edition = "2024",
    visibility = ["//visibility:public"],
)

rust_test(
    name = "error_test",
    crate = ":precise_error",
    edition = "2024",
    rustc_flags = [
        "-C",
        "debug-assertions",
    ],
)
