# Licensed under the Apache-2.0 license
# SPDX-License-Identifier: Apache-2.0

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "error",
    srcs = ["error.rs"],
    crate_name = "openprot_error",
    edition = "2024",
    visibility = ["//visibility:public"],
)

rust_test(
    name = "error_test",
    crate = ":error",
    edition = "2024",
)
