# Licensed under the Apache-2.0 license
# SPDX-License-Identifier: Apache-2.0

load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "spimonitor_api",
    srcs = [
        "src/lib.rs",
        "src/service.rs",
    ],
    edition = "2024",
    visibility = ["//visibility:public"],
)
